CP Weekly, PyDev, version numbers.

--- a/_drafts/2020-02-25-draft.md
+++ b/_drafts/2020-02-25-draft.md
@@ -106,6 +106,10 @@ Glitch, Glimmer, and the Web We Need - [Glitch](https://glitch.com/glimmer/post/
 
 Good thread _"what is the most intimidating part of hardware development to you, if you've ever had doubts about starting a first project with microcontrollers, etc?"_ - [Twitter](https://twitter.com/noopkat/status/1229547642343972864).
 
+PyDev of the Week: Hameer Abbasi on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/02/24/pydev-of-the-week-hameer-abbasi/)
+
+CircuitPython Weekly for February 24th, 2020 on [YouTube](https://youtu.be/3QtSKnuXtsY).
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/02/18/ports-app-updates-clues-in-the-news-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [Awesome MicroPythons, the ports and forks of MicroPython](https://github.com/adafruit/awesome-micropythons).
 
 ## Coming soon
@@ -261,13 +265,13 @@ April 15-23, 2020, Pittsburgh, Pennsylvania, USA - The PyCon 2020 conference, wh
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [4.1.2](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.0.0-beta.5](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20190222](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.1](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a3](https://www.python.org/download/pre-releases/).
 
 [1604 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
