Add Jeff's input

--- a/_drafts/2020-03-03-draft.md
+++ b/_drafts/2020-03-03-draft.md
@@ -91,9 +91,11 @@ What is the team up to this week? Let’s check in!
 
 **Jeff**
 
-[![Jeff](../assets/0mdd2020/jeff.jpg)](https://circuitpython.org/)
+[![Jeff](../assets/03032020/3032020jeff.jpg)](https://circuitpython.org/)
 
+I've continued working on [ulab](https://github.com/v923z/micropython-ulab/) with great ongoing support from its primary author, Zoltán Vörös.  Scott also pitched in by helping us with a problem importing built-in modules whose names contain dots.  There are a number of things to do before it's ready so we anticipate ulab will be in a 5.x.0 release, rather than in 5.0.0.
 
+I also added support for SparkFun's [Thing Plus - SAMD51](https://www.sparkfun.com/products/14713) to CircuitPython.  This board has a similar microcontroller to Adafruit's [Feather M4 Express](https://www.adafruit.com/product/3857), with somewhat less storage for your Python code but a Qwiic connector—compatible with [STEMMA QT](https://learn.adafruit.com/introducing-adafruit-stemma-qt/what-is-stemma) products—built in. This will appear in the next beta or release candidate of CircuitPython.
 
 **Kattni**
 
