add melissa input

--- a/_drafts/2020-03-03-draft.md
+++ b/_drafts/2020-03-03-draft.md
@@ -111,9 +111,11 @@ I also added support for SparkFun's [Thing Plus - SAMD51](https://www.sparkfun.c
 
 **Melissa**
 
-[![Melissa](../assets/0mdd2020/melissa.jpg)](https://circuitpython.org/)
+[![Melissa](../assets/03032020/30320melissa.jpg)](https://circuitpython.org/)
 
+This past week I've been focusing on creating a Web Bluetooth dashboard that works with the Bluefruit Playground firmware on CLUE and Circuit Playground Bluefruit boards. I started off with learning Web Bluetooth and after getting the basics down, I started programming a dashboard.
 
+It is a dynamically created dashboard written in pure JavaScript that will query the board for available services and display panels in the dashboard according to how the services are setup. I currently have it reading all of the buttons and sensors that there are currently services for and am now working on code to write to services such as the tone generator or being able to set the neopixels to a specific color. One of my favorite things about this dashboard is that it is so easy to change configuration options and change how you want the data to display.
 
 **Scott**
 
