--- a/_drafts/2020-03-03-draft.md
+++ b/_drafts/2020-03-03-draft.md
@@ -85,9 +85,9 @@ What is the team up to this week? Let’s check in!
 
 **Dan**
 
-[![Dan](../assets/0mdd2020/dan.jpg)](https://circuitpython.org/)
+I finished off the last remaining blocking issues for a CircuitPython 5.0.0 general availability release, and created and released the first (well, zeroth) release candidate. So we hope to have a stable 5.0.0 release soon!
 
-
+I ended up doing a lot of support over the last week, which brought me back in touch with the kinds of hardware and software issues people are currently encountering. This is helpful in figuring out what to work on next.
 
 **Jeff**
 
