add bryan input

--- a/_drafts/2020-03-03-draft.md
+++ b/_drafts/2020-03-03-draft.md
@@ -79,9 +79,13 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/0mdd2020/bryan.jpg)](https://circuitpython.org/)
+[![Bryan](../assets/03032020/3032020bryan.jpg)](https://circuitpython.org/)
 
+Last week I managed to finish both the Arduino and CircuitPython drivers for the HTS221 as well as tester code for it to allow us to verify each and every board as they make their way from the oven to you. I also managed to write guides for both the LPS25 and HTS221. They're both in the cue for manufacturing so keep an eye out for them!
 
+Next up I'm working with the ICM-20948 from invensense. This is a pretty groovy 9-DoF IMU that they [describe](https://www.invensense.com/wp-content/uploads/2016/06/DS-000189-ICM-20948-v1.3.pdf) to be "the World’s Lowest Power 9-Axis MEMS MotionTracking™ Device". It certainly does have lots of neat features that can enable low power operation, so I'm interested to see what it's capable of.
+
+Over the next week I'll be working on libraries, tester code and likely a guide for the ICM-20948.
 
 **Dan**
 
