--- a/_drafts/2020-03-03-draft.md
+++ b/_drafts/2020-03-03-draft.md
@@ -103,9 +103,7 @@ I also added support for SparkFun's [Thing Plus - SAMD51](https://www.sparkfun.c
 
 **Kattni**
 
-[![Kattni](../assets/0mdd2020/kattni.jpg)](https://circuitpython.org/)
-
-
+This week I continued working with the Adafruit CircuitPython PyBadger library. In preparation for PyCon 2020, I was tasked with creating a simple badge example for CLUE. After deciding I wanted the option to include a preferred pronoun, it became clear what we currently had available wasn't enough. So, I added a custom badge feature to PyBadger. It expands on the Hello-My-Name-Is-style badge to allow you to display multiple lines of text over a color-block or image background. The new feature expands the scope of what PyBadger can do significantly. With only a few lines of code, you can create a custom badge displaying whatever information you're looking to share. The new PyBadger will be available in the [CircuitPython Library Bundle](https://circuitpython.org/libraries) this week, including examples for PyBadge, Pygamer and CLUE. I'm working on a guide page to go with it that explains how to use all the features to make a custom badge on your Adafruit CLUE. Keep an eye out for that update!
 
 **Lucian**
 
