add lucian and scott input

--- a/_drafts/2020-03-03-draft.md
+++ b/_drafts/2020-03-03-draft.md
@@ -107,9 +107,9 @@ This week I continued working with the Adafruit CircuitPython PyBadger library. 
 
 **Lucian**
 
-[![Lucian](../assets/0mdd2020/lucian.jpg)](https://circuitpython.org/)
+This past week I worked on the PulseIO implementation outside of PWMOut, which is mostly used for IR sensors. This includes PulseOut, which emulates things like TV remotes by sending a carrier signal in a defined set of pulses, and PulseIn, which interprets this information.
 
-
+I also wrote a guide for getting started with the 9Zephyr RTOS0(https://learn.adafruit.com/blinking-led-with-zephyr-rtos) this week. Zephyr is on everyone's radar as an infrastructure layer that's being used in [MicroPython](https://github.com/micropython/micropython/tree/master/ports/zephyr) and may eventually be worked into Circuitpython. It was interesting to get to work with a new RTOS aside from my previous mainstay Mbed-OS, and I'm hoping to move a number of my personal projects to it in the future. 
 
 **Melissa**
 
@@ -121,9 +121,13 @@ It is a dynamically created dashboard written in pure JavaScript that will query
 
 **Scott**
 
-[![Scott](../assets/0mdd2020/scott.jpg)](https://circuitpython.org/)
+This week I've been working on wrapping up BroadcastNet. I redid the scanning using `hcitool` and `hcidump` because the bluez interface always deduplicates advertisements from a single device. It's been running reliably here at my house so I've committed and released everything. John Park just got it running so expect to see a guide about it soon!
 
+I also collaborated a bit with Dan on bug squashing for the 5.0.0 release candidate. I squashed the bug where leaving a CircuitPython device with the drive ejected but USB plugged in would crash my Mac. I also fixed a safe mode crash when exiting the REPL with CTRL-D.
 
+I'm vacationing the last half of this week in Colorado. Thursday is a bit of work day because I am visiting SparkFun and meeting up with Great Scott Gadget folks to chat about CircuitPython! The rest of the weekend is vacation.
+
+Next week, after the regular CircuitPython Weekly, I'm going to jump into basic power savings so that `time.sleep` will actually sleep the CPU. Hopefully that basic work will give a big energy savings for all of the BroadcastNet sensors and other CircuitPython boards.
 
 ## Upcoming events!
 
