--- a/_drafts/2020-03-03-draft.md
+++ b/_drafts/2020-03-03-draft.md
@@ -109,7 +109,7 @@ This week I continued working with the Adafruit CircuitPython PyBadger library. 
 
 This past week I worked on the PulseIO implementation outside of PWMOut, which is mostly used for IR sensors. This includes PulseOut, which emulates things like TV remotes by sending a carrier signal in a defined set of pulses, and PulseIn, which interprets this information.
 
-I also wrote a guide for getting started with the 9Zephyr RTOS0(https://learn.adafruit.com/blinking-led-with-zephyr-rtos) this week. Zephyr is on everyone's radar as an infrastructure layer that's being used in [MicroPython](https://github.com/micropython/micropython/tree/master/ports/zephyr) and may eventually be worked into Circuitpython. It was interesting to get to work with a new RTOS aside from my previous mainstay Mbed-OS, and I'm hoping to move a number of my personal projects to it in the future. 
+I also wrote a guide for getting started with the [Zephyr RTOS](https://learn.adafruit.com/blinking-led-with-zephyr-rtos) this week. Zephyr is on everyone's radar as an infrastructure layer that's being used in [MicroPython](https://github.com/micropython/micropython/tree/master/ports/zephyr) and may eventually be worked into Circuitpython. It was interesting to get to work with a new RTOS aside from my previous mainstay Mbed-OS, and I'm hoping to move a number of my personal projects to it in the future. 
 
 **Melissa**
 
