Add meeting notes, versions and 5.0.0 announcement!

--- a/_drafts/2020-03-03-draft.md
+++ b/_drafts/2020-03-03-draft.md
@@ -11,15 +11,19 @@ categories: weekly
 
 Hi everyone! It's the latest Python for Microcontrollers newsletter, brought you by the Python on Hardware community! We're on [Discord](https://discord.gg/HYqvREz) or search in server Discovery for Python, [Twitter](https://twitter.com/search?q=circuitpython&src=typed_query&f=live), and to see past newsletters - [view them all here](https://www.adafruitdaily.com/category/circuitpython/). If you're reading this on the web, [subscribe here](https://www.adafruitdaily.com/). Let's get this going!
 
-## CircuitPython 5.0.0 Release Candidate 1!
+## CircuitPython 5.0.0!
 
 [![5 OH](../assets/03032020/3320fivealive.jpg)](https://circuitpython.org/downloads)
 
-**This is a 5.0.0 Release Candidate — please test!** This is release 5.0.0-rc.1 (Release candidate 1). If this release does not have show-stopper issues, it will be re-released as 5.0.0, the first 5.x.x stable release. Read more on [the blog post](https://blog.adafruit.com/2020/03/01/circuitpython-5-0-0-release-candidate-1-adafruit-circuitpython/) and download at [circuitpython.org/downloads](https://circuitpython.org/downloads). Hackster also [has some coverage](https://www.hackster.io/news/circuitpython-5-0-0-nears-completion-first-release-candidate-now-available-to-download-ac8b6cf7ef13)!
+CircuitPython 5.0.0 is out now! After two release candidates, 5.0.0 has been released! 5.0.0 is the latest major revision of CircuitPython. It features many improvements and enhancements to `displayio`, including grayscale OLED and e-paper displays, extensive additions and improvements to BLE support, beta support for the STM32F4, iMX RT10xx and Sony Spresense microcontroller families, Korean translations, and PWM audio support. It is the first stable release for 51 boards (out of 116)!
+
+**Thank you** to all of the CircuitPython contributors and community!
+
+Nothing is perfect, so please let us know if you find any [issues](https://github.com/adafruit/circuitpython/issues/). We're looking forward to growing CircuitPython even more with follow up 5.x releases.
 
 [![boards](../assets/03032020/3320116boards.jpg)](https://circuitpython.org/downloads)
 
-With the CircuitPython 5.0.0 Release Candidate there are also some new boards in [circuitpython.org/downloads](https://circuitpython.org/downloads), including:
+With the CircuitPython 5.0.0 Release Candidate 1 (released over the weekend) there are also some new boards in [circuitpython.org/downloads](https://circuitpython.org/downloads), including:
 
  * [NANO 33 IoT](https://circuitpython.org/board/arduino_nano_33_iot/).
  * [CircuitBrains Basic](https://circuitpython.org/board/circuitbrains_basic_m0/).
@@ -255,6 +259,10 @@ ESP32-S2 SoCs, Modules and Dev Boards Go Into Mass Production - [Espressif](http
 
 First up for us will be TinyUSB, then CircuitPython! - [GitHub](https://github.com/hathach/tinyusb/pull/282).
 
+CircuitPython Weekly meeting for March 2nd, 2020 [on YouTube](https://youtu.be/hlnyZsfBNZM) and [on diode.zone](https://diode.zone/videos/watch/7a2303dc-7238-45ec-8e7f-fd9652761828)
+
+PyDev of the Week: Doug Farrell [on Mouse vs Python](https://www.blog.pythonlibrary.org/2020/03/02/pydev-of-the-week-doug-farrell/)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/02/25/circuitpython-measures-up-and-why-circuitpython-is-the-future-of-digital-making-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [mitutoyo: A library for the Mitutoyo Digimatic (SPC) protocol using CircuitPython](https://github.com/vifino/CircuitPython-mitutoyo).
 
 ## IoT Design Week with Microchip's "Wizard of Make" Bob Martin and Adafruit
@@ -468,13 +476,13 @@ If you have a company or community (or both!), try it out, and if you make "some
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.0.0](https://github.com/adafruit/circuitpython/releases/latest). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200229](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.2](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a4](https://www.python.org/download/pre-releases/).
 
 [1612 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
