Add a few links

--- a/_drafts/2020-03-03-draft.md
+++ b/_drafts/2020-03-03-draft.md
@@ -15,7 +15,7 @@ Hi everyone! It's the latest Python for Microcontrollers newsletter, brought you
 
 [![5 OH](../assets/03032020/3320fivealive.jpg)](https://circuitpython.org/downloads)
 
-CircuitPython 5.0.0 is out now! After two release candidates, 5.0.0 has been released! 5.0.0 is the latest major revision of CircuitPython. It features many improvements and enhancements to `displayio`, including grayscale OLED and e-paper displays, extensive additions and improvements to BLE support, beta support for the STM32F4, iMX RT10xx and Sony Spresense microcontroller families, Korean translations, and PWM audio support. It is the first stable release for 51 boards (out of 116)!
+CircuitPython 5.0.0 is out now! After two release candidates, [5.0.0 has been released](https://circuitpython.org/downloads)! 5.0.0 is the latest major revision of CircuitPython. It features many improvements and enhancements to `displayio`, including grayscale OLED and e-paper displays, extensive additions and improvements to BLE support, beta support for the STM32F4, iMX RT10xx and Sony Spresense microcontroller families, Korean translations, and PWM audio support. It is the first stable release for 51 boards (out of 116)! See [the release notes](https://github.com/adafruit/circuitpython/releases/tag/5.0.0) for more details.
 
 **Thank you** to all of the CircuitPython contributors and community!
 
