--- a/_drafts/2020-03-10-draft.md
+++ b/_drafts/2020-03-10-draft.md
@@ -125,17 +125,15 @@ After finishing that up, I wrote up a guide on using the dashboard. You can chec
 
 **Scott**
 
-[![Scott](../assets/0mdd2020/scott.jpg)](https://circuitpython.org/)
+I was in Colorado at the end of the week. Thursday I visited SparkFun and met up with Great Scott Gadget folks to chat about CircuitPython. Thanks to everyone for taking the time to chat!
 
+When I got back I had some email catch up to do and then helped a bit with releasing CircuitPython 5.0.0! Please update and let us know how it goes!
 
+I've also been helping with the BroadcastNet demos that JohnPark has been doing.
+
+The rest of this week I'm heads down on optimizing CircuitPython's power consumption so that BroadcastNet sensors and conference badges last longer on their battery charges. The main goal is to make `time.sleep()` actually go into a low power state. I think I can reduce the power consumption during sleep by a factor of 10 so that should be handy.
 
 ## Upcoming events!
-
-[![PyCascades](../assets/01072020/DATE-pyc.jpg)](https://2020.pycascades.com/)
-
-Scott is speaking at [PyCascades](https://2020.pycascades.com/) about Python's Next Decade and Us. It's February 8th and 9th, 2020.
-
->_"PyCascades is a two-day, single-track Python conference. We previously hosted PyCascades in Vancouver and Seattle. For our third iteration in 2020 we'll be in Portland, Oregon USA. PyCascades is organized by members of the Python communities in Vancouver, Seattle, and Portland. We aim to bring together Python users and developers from both the Pacific Northwest and around the world."_
 
 [![OHSummit20](../assets/DIR-LOCATION/DATE-ohsummit01.jpg)](https://2020.oshwa.org/)
 
