--- a/_drafts/2020-03-10-draft.md
+++ b/_drafts/2020-03-10-draft.md
@@ -5,7 +5,7 @@ date: 2020-02-11 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -33,13 +33,13 @@ Why Mu? Mu tries to make it as easy as possible to get started with programming 
 
 ## New Learn Guides!
 
-[title](url) from [name](url)
+[CLUE Custom CircuitPython Badge](https://learn.adafruit.com/clue-custom-circuit-python-badge) from [Kattni](https://learn.adafruit.com/users/kattni)
 
-## Updated Guides - Now With More Python!
+[Adafruit ICM20649 Wide-Range 6-DoF IMU Accelerometer and Gyro](https://learn.adafruit.com/adafruit-icm20649-wide-range-6-dof-imu-accelerometer-and-gyro) from [Bryan Siepert](https://learn.adafruit.com/users/siddacious)
 
-**You can use CircuitPython libraries on Raspberry Pi!** We're updating all of our CircuitPython guides to show how to wire up sensors to your Raspberry Pi, and load the necessary CircuitPython libraries to get going using them with Python. We'll be including the updates here so you can easily keep track of which sensors are ready to go. Check it out!
+[CLUE Dice Roller](https://learn.adafruit.com/clue-dice-roller) from [Dave Astels](https://learn.adafruit.com/users/dastels)
 
-[title](url)
+[CircuitPython BLE Morse Code Chat](https://learn.adafruit.com/circuitpython-ble-wireless-morse-code-chat) from [Carter Nelson](https://learn.adafruit.com/users/caternuson)
 
 ## CircuitPython Libraries!
 
@@ -53,25 +53,41 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
-
-**New Libraries!**
-
-Here's this week's new CircuitPython libraries:
-
-* [library](url)
+The current number of CircuitPython libraries is **215**!
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_TrellisM4](https://github.com/adafruit/Adafruit_CircuitPython_TrellisM4)
+ * [Adafruit_CircuitPython_BluefruitSPI](https://github.com/adafruit/Adafruit_CircuitPython_BluefruitSPI)
+ * [Adafruit_CircuitPython_ESP32SPI](https://github.com/adafruit/Adafruit_CircuitPython_ESP32SPI)
+ * [Adafruit_CircuitPython_MIDI](https://github.com/adafruit/Adafruit_CircuitPython_MIDI)
+ * [Adafruit_CircuitPython_binascii](https://github.com/adafruit/Adafruit_CircuitPython_binascii)
+ * [Adafruit_CircuitPython_HT16K33](https://github.com/adafruit/Adafruit_CircuitPython_HT16K33)
+ * [Adafruit_CircuitPython_ATECC](https://github.com/adafruit/Adafruit_CircuitPython_ATECC)
+ * [Adafruit_CircuitPython_PyBadger](https://github.com/adafruit/Adafruit_CircuitPython_PyBadger)
+ * [Adafruit_CircuitPython_BLE](https://github.com/adafruit/Adafruit_CircuitPython_BLE)
+ * [Adafruit_CircuitPython_IRRemote](https://github.com/adafruit/Adafruit_CircuitPython_IRRemote)
+ * [Adafruit_CircuitPython_Requests](https://github.com/adafruit/Adafruit_CircuitPython_Requests)
+ * [Adafruit_CircuitPython_Wiznet5k](https://github.com/adafruit/Adafruit_CircuitPython_Wiznet5k)
 
 **PyPI Download Stats!**
 
 We've written a special library called Adafruit Blinka that makes it possible to use CircuitPython Libraries on [Raspberry Pi and other compatible single-board computers](https://learn.adafruit.com/circuitpython-on-raspberrypi-linux/). Adafruit Blinka and all the CircuitPython libraries have been deployed to PyPI for super simple installation on Linux! Here are the top 10 CircuitPython libraries downloaded from PyPI in the last week, including the total downloads for those libraries:
 
-KATTNI TABLE HERE
+| Library                                                | Last Week   | Total |   
+|:-------                                                |:--------:   |:-----:|   
+| Adafruit-Blinka                                        | 2026        | 52587 |   
+| Adafruit_CircuitPython_BusDevice                       | 1125        | 26657 |   
+| Adafruit_CircuitPython_NeoPixel                        | 496         | 8302 |    
+| Adafruit_CircuitPython_MCP230xx                        | 329         | 8510 |    
+| Adafruit_CircuitPython_Register                        | 243         | 6215 |    
+| Adafruit_CircuitPython_PCA9685                         | 148         | 3367 |    
+| Adafruit_CircuitPython_ServoKit                        | 141         | 3153 |    
+| Adafruit_CircuitPython_Motor                           | 127         | 3501 |    
+| Adafruit_CircuitPython_PN532                           | 127         | 1878 |    
+| Adafruit_CircuitPython_PyBadger                        | 85          | 282 |     
 
 ## What’s the team up to this week?
 
@@ -159,7 +175,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1618 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help – CircuitPython messaging to other languages!
 
