--- a/_drafts/2020-03-10-draft.md
+++ b/_drafts/2020-03-10-draft.md
@@ -211,6 +211,10 @@ Solar-electric atmospheric satellite - [GitHub](https://github.com/gusgordon/atm
 
 Remember the discount on HackSpace Magazine and the [video](https://youtu.be/wH8sPYxkTmU) we did for their USA subscription launch? Some of ya’ll asked about MagPi and there is now a deal for that too! Here is the exclusive USA offer! - [magpi.cc](https://magpi.cc/adafruit) We do not receive any compensation for this, we are helping the Raspberry Pi foundation get the word out and support a great magazine for makers.
 
+PyDev of the Week: Tommy Falgout on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/03/09/pydev-of-the-week-tommy-falgout/)
+
+CircuitPython Weekly for March 9th, 2020 on [YouTube](https://youtu.be/1ROWGltWufo).
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/03/03/circuitpython-5-open-source-python-bike-computers-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [116 boards on CircuitPython](https://circuitpython.org/downloads)!
 
 ## Coming soon
@@ -365,13 +369,13 @@ April 15-23, 2020, Pittsburgh, Pennsylvania, USA - The PyCon 2020 conference, wh
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.0.0](https://github.com/adafruit/circuitpython/releases/latest). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20190307](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.2](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a4](https://www.python.org/download/pre-releases/).
 
 [1618 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
