--- a/_drafts/2020-03-17-draft.md
+++ b/_drafts/2020-03-17-draft.md
@@ -85,9 +85,9 @@ What is the team up to this week? Let’s check in!
 
 **Dan**
 
-[![Dan](../assets/0mdd2020/dan.jpg)](https://circuitpython.org/)
+Last week's CircuitPython 5.0.0 release went smoothly. I removed old 5.0.0 alpha and beta release artifacts from the GitHub releases since they are available on Amazon S3; this speeds up loading the GitHub release pages substantially.
 
-
+This week, I've been spending a lot of time trying to debug spurious writes to the SAMD51 internal flash. There isn't an obvious cause. I have a user's program that, when power cycled, causes the issue, and have been trimming it down to find the minimum example. This has been difficult: removing seemingly innocuous things causes the problem to go away.
 
 **Jeff**
 
