--- a/_drafts/2020-03-17-draft.md
+++ b/_drafts/2020-03-17-draft.md
@@ -97,9 +97,9 @@ This week, I've been spending a lot of time trying to debug spurious writes to t
 
 **Kattni**
 
-[![Kattni](../assets/0mdd2020/kattni.jpg)](https://circuitpython.org/)
+This week I've been working on the [Adafruit Feather nRF52840 Sense guide](https://learn.adafruit.com/adafruit-feather-sense/) for the [Feather Sense](https://www.adafruit.com/product/4516). This latest edition to the Feather family is a Feather nRF52840 packed with a bunch of sensors. The guide has everything you need to know about the Feather Sense including an overview, detailed pinouts, and info on using it with both Arduino and CircuitPython, and resources for more details on the board and each of the sensors. I also included a CircuitPython example that prints data from all the sensors to get you started with your CircuitPython Feather Sense project. Check it out!
 
-
+We've also been working to update [Pylint](https://www.pylint.org/) and implement using [Black](https://github.com/psf/black) on all of our libraries. The updates are moving quickly and smoothly. Thanks to Dylan for all his hard work on this project. We'll be releasing the updates for each library as we go. This will not cause any changes to how you use the code, and it will bring all of the code up to current standards and make it more readable.
 
 **Lucian**
 
