--- a/_drafts/2020-03-17-draft.md
+++ b/_drafts/2020-03-17-draft.md
@@ -109,9 +109,11 @@ We've also been working to update [Pylint](https://www.pylint.org/) and implemen
 
 **Melissa**
 
-[![Melissa](../assets/0mdd2020/melissa.jpg)](https://circuitpython.org/)
+This past week, I started working on implementing Web Bluetooth using advertisements, but things didn't go as expected. I wrote a very basic sniffer to see the It seems the implementation for the advertisements portion of Web Bluetooth is not quite as complete as the connection-based portion and it was inconsistent between platforms. We are going to wait for further development to be completed before resuming that.
 
+Since I wasn't able to work on the advertisements, I switched over to working on GitHub issues and Pull Requests. I was able to merge in several PRs that had been waiting on me. I spent a little time focusing on some issues that were still affecting the Raspberry Pi since Buster had been released and busted things that had not been resolved. A user had posted a possible solution to get the TFT rotation on capacitive touch displays working and I was able to take it further and fixed that portion of it at least.
 
+The next project I'll be working on is writing up a guide for adding a Single Board Computer to PlatformDetect so that users can more easily add their favorite boards themselves.
 
 **Scott**
 
