--- a/_drafts/2020-03-17-draft.md
+++ b/_drafts/2020-03-17-draft.md
@@ -79,9 +79,13 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/0mdd2020/bryan.jpg)](https://circuitpython.org/)
+As expected this past week has seen me working on libraries for the ICM20948 9-DoF IMU from InvenSense. The sensor is close enough to the ICM20649 that I was able to refactor those libraries to add support for the accelerometer and gyro, however the magnetometer is another story.
 
+[![Bryan](../assets/03172020/03172020bryan.jpg)](https://circuitpython.org/)
 
+As mentioned last week, the ICM20948 takes an interesting approach to adding a 3-axis magnetometer to the common pairing of an accelerometer and gyro. Like some other 6-DoF accel+gyro combos it has support for gathering data from other sensors on its own external I2C bus. In the case of the ICM20948 however has its magnetometer in the same package but separate from the accel+gryo sitting on the external I2C bus.
+
+The setup of the magnetometer has been assisted by the aforementioned SparkFun library, however its still fairly complex and has been less than straightforward to finish implementing. I hope to wrap it up today and then move on to more new sensors next week.
 
 **Dan**
 
