--- a/_drafts/2020-03-17-draft.md
+++ b/_drafts/2020-03-17-draft.md
@@ -97,7 +97,10 @@ This week, I've been spending a lot of time trying to debug spurious writes to t
 
 [![Jeff](../assets/0mdd2020/jeff.jpg)](https://circuitpython.org/)
 
+My first guide has been published!  ulab: Crunch Numbers fast in CircuitPython.  It has four examples including a way to use light sensor together with a Finite Impulse Response (FIR) filter to measure your pulse on an Adafruit CLUE
+ulab (pronounced "micro lab") lets you perform number crunching tasks in CircuitPython more quickly, often around 10x as fast. This can be very handy when dealing with sensor data, as we'll see below.
 
+Right now, you need to get the "absolute newest" version of CircuitPython to have ulab enabled.  It'll be in the stable version no sooner than when 5.1.0 is released.
 
 **Kattni**
 
@@ -107,9 +110,9 @@ We've also been working to update [Pylint](https://www.pylint.org/) and implemen
 
 **Lucian**
 
-[![Lucian](../assets/0mdd2020/lucian.jpg)](https://circuitpython.org/)
+This past week I worked on PulseIn, completing the PulseIO trio (PWMOut, PulseOut, and PulseIn). It turned out to be a straightforward implementation given how simple the EXTI system is on STM32, and matches the existing implementations on the SAMD51 and NRF52 closely in terms of performance. However, I'll need to refactor out some of the external interrupt system for use by modules like RotaryIO and the upcoming power improvements which rely on it to wake from sleep. 
 
-
+Coming up next I'm working on implementing the STM32H743. There's some structural changes that need to be implemented for the F7 and H7 lines - even the port directory is `stm32f4` - so I'm working on mapping out everything that might end up breaking so I can be proactive about addressing it. I'm hoping to have some early builds in the works for the Nucleo F743 this coming week. 
 
 **Melissa**
 
