--- a/_drafts/2020-03-17-draft.md
+++ b/_drafts/2020-03-17-draft.md
@@ -97,7 +97,8 @@ This week, I've been spending a lot of time trying to debug spurious writes to t
 
 [![Jeff](../assets/0mdd2020/jeff.jpg)](https://circuitpython.org/)
 
-My first guide has been published!  ulab: Crunch Numbers fast in CircuitPython.  It has four examples including a way to use light sensor together with a Finite Impulse Response (FIR) filter to measure your pulse on an Adafruit CLUE
+My first guide has been published! [ulab: Crunch Numbers fast in CircuitPython](https://learn.adafruit.com/ulab-crunch-numbers-fast-with-circuitpython/overview).  It has four examples including a way to use light sensor together with a Finite Impulse Response (FIR) filter to measure your pulse on an [Adafruit CLUE](https://www.adafruit.com/clue).
+
 ulab (pronounced "micro lab") lets you perform number crunching tasks in CircuitPython more quickly, often around 10x as fast. This can be very handy when dealing with sensor data, as we'll see below.
 
 Right now, you need to get the "absolute newest" version of CircuitPython to have ulab enabled.  It'll be in the stable version no sooner than when 5.1.0 is released.
@@ -124,9 +125,15 @@ The next project I'll be working on is writing up a guide for adding a Single Bo
 
 **Scott**
 
-[![Scott](../assets/0mdd2020/scott.jpg)](https://circuitpython.org/)
+I've spent the last week switching CircuitPython's time keeping to the real time counter (RTC) within the nRF and just begun SAMD work. Previously we used the Systick timer that runs when the CPU does. When we sleep, we turn the CPU off to save power. So, by moving to the RTC we can still keep time while asleep.
 
+This work has been a bit tricky because some of our native C modules use the internal clock as a reference and the RTC has less precision than SysTick. The main example of this is PulseIn which uses the internal time to know when a pulse edge arrives. Other native modules, such as AudioOut, do processing in the background in order to keep data flowing and we need to make sure and wake up every so often if we need to do that.
 
+[![Scott](../assets/03172020/03172020scott.jpg)](https://circuitpython.org/)
+
+As I work on this I've been testing lifetime of a 105mAh battery powered CircuitPlayground Bluefruit. It broadcasts its internal temperature and battery voltage every 60 seconds. In the chart above you can see the log of battery voltage over time. The left section is with stock 5.0.0 and the right is with the latest version of [my lower_power branch](https://github.com/tannewt/circuitpython/tree/lower_power). It is still going so stay tuned to see how long it ends up running.
+
+Overall, the work is promising. It'll lay a foundation for further low power optimization in CircuitPython and make it better for battery powered sensors and conference badges.
 
 ## Upcoming events!
 
