--- a/_drafts/2020-03-17-draft.md
+++ b/_drafts/2020-03-17-draft.md
@@ -95,7 +95,7 @@ This week, I've been spending a lot of time trying to debug spurious writes to t
 
 **Jeff**
 
-[![Jeff](../assets/0mdd2020/jeff.jpg)](https://circuitpython.org/)
+[![Jeff](../assets/03172020/03172020jeff.jpg)](https://circuitpython.org/)
 
 My first guide has been published! [ulab: Crunch Numbers fast in CircuitPython](https://learn.adafruit.com/ulab-crunch-numbers-fast-with-circuitpython/overview).  It has four examples including a way to use light sensor together with a Finite Impulse Response (FIR) filter to measure your pulse on an [Adafruit CLUE](https://www.adafruit.com/clue).
 
