--- a/_drafts/2020-03-17-draft.md
+++ b/_drafts/2020-03-17-draft.md
@@ -5,7 +5,7 @@ date: 2020-02-11 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -33,13 +33,19 @@ Why Mu? Mu tries to make it as easy as possible to get started with programming 
 
 ## New Learn Guides!
 
-[title](url) from [name](url)
+[ulab: Crunch Numbers fast in CircuitPython](https://learn.adafruit.com/ulab-crunch-numbers-fast-with-circuitpython) from [Jeff Epler](https://learn.adafruit.com/users/jepler)
 
-## Updated Guides - Now With More Python!
+[Bluetooth LE Sensor Nodes to Raspberry Pi WiFi Bridge](https://learn.adafruit.com/bluetooth-le-broadcastnet-sensor-node-raspberry-pi-wifi-bridge) from [John Park](https://learn.adafruit.com/users/johnpark)
 
-**You can use CircuitPython libraries on Raspberry Pi!** We're updating all of our CircuitPython guides to show how to wire up sensors to your Raspberry Pi, and load the necessary CircuitPython libraries to get going using them with Python. We'll be including the updates here so you can easily keep track of which sensors are ready to go. Check it out!
+[Ethernet for CircuitPython with Wiznet5K](https://learn.adafruit.com/ethernet-for-circuitpython) from [Brent Rubell](https://learn.adafruit.com/users/brubell)
 
-[title](url)
+[¡Bienvenido a CircuitPython!](https://learn.adafruit.com/bienvenido-a-circuitpython-2) from [Álvaro Figueroa Cabezas and Kattni](https://learn.adafruit.com/users/kattni)
+
+[A colorful CLUE slideshow purse with Bright Wearables](https://learn.adafruit.com/a-colorful-clue-slideshow-purse) from [Anne Barela](https://learn.adafruit.com/users/AnneBarela)
+
+[Digital Egg Drop Experiment with CLUE](https://learn.adafruit.com/egg-drop-clue) from [John Park](https://learn.adafruit.com/users/johnpark)
+
+[Adafruit Feather nRF52840 Sense](https://learn.adafruit.com/adafruit-feather-sense) from [Kattni](https://learn.adafruit.com/users/kattni)
 
 ## CircuitPython Libraries!
 
@@ -53,25 +59,46 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
+The current number of CircuitPython libraries is **220**!
 
 **New Libraries!**
 
 Here's this week's new CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_RockBlock](https://github.com/adafruit/Adafruit_CircuitPython_RockBlock)
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_BLE_BroadcastNet](https://github.com/adafruit/Adafruit_CircuitPython_BLE_BroadcastNet)
+ * [Adafruit_CircuitPython_Pypixelbuf](https://github.com/adafruit/Adafruit_CircuitPython_Pypixelbuf)
+ * [Adafruit_CircuitPython_Debouncer](https://github.com/adafruit/Adafruit_CircuitPython_Debouncer)
+ * [Adafruit_CircuitPython_turtle](https://github.com/adafruit/Adafruit_CircuitPython_turtle)
+ * [Adafruit_CircuitPython_SHT31D](https://github.com/adafruit/Adafruit_CircuitPython_SHT31D)
+ * [Adafruit_CircuitPython_Thermal_Printer](https://github.com/adafruit/Adafruit_CircuitPython_Thermal_Printer)
+ * [Adafruit_CircuitPython_SSD1675](https://github.com/adafruit/Adafruit_CircuitPython_SSD1675)
+ * [Adafruit_CircuitPython_HT16K33](https://github.com/adafruit/Adafruit_CircuitPython_HT16K33)
+ * [Adafruit_CircuitPython_CLUE](https://github.com/adafruit/Adafruit_CircuitPython_CLUE)
+ * [Adafruit_CircuitPython_IL91874](https://github.com/adafruit/Adafruit_CircuitPython_IL91874)
+ * [Adafruit_CircuitPython_Wiznet5k](https://github.com/adafruit/Adafruit_CircuitPython_Wiznet5k)
 
 **PyPI Download Stats!**
 
 We've written a special library called Adafruit Blinka that makes it possible to use CircuitPython Libraries on [Raspberry Pi and other compatible single-board computers](https://learn.adafruit.com/circuitpython-on-raspberrypi-linux/). Adafruit Blinka and all the CircuitPython libraries have been deployed to PyPI for super simple installation on Linux! Here are the top 10 CircuitPython libraries downloaded from PyPI in the last week, including the total downloads for those libraries:
 
-KATTNI TABLE HERE
+| Library                                                | Last Week   | Total |   
+|:-------                                                |:--------:   |:-----:|   
+| Adafruit-Blinka                                        | 2026        | 52587 |   
+| Adafruit_CircuitPython_BusDevice                       | 1125        | 26657 |   
+| Adafruit_CircuitPython_NeoPixel                        | 496         | 8302 |    
+| Adafruit_CircuitPython_MCP230xx                        | 329         | 8510 |    
+| Adafruit_CircuitPython_Register                        | 243         | 6215 |    
+| Adafruit_CircuitPython_PCA9685                         | 148         | 3367 |    
+| Adafruit_CircuitPython_ServoKit                        | 141         | 3153 |    
+| Adafruit_CircuitPython_Motor                           | 127         | 3501 |    
+| Adafruit_CircuitPython_PN532                           | 127         | 1878 |    
+| Adafruit_CircuitPython_PyBadger                        | 85          | 282 |     
 
 ## What’s the team up to this week?
 
@@ -151,7 +178,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1636 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help – CircuitPython messaging to other languages!
 
