--- a/_drafts/2020-03-17-draft.md
+++ b/_drafts/2020-03-17-draft.md
@@ -69,6 +69,8 @@ Girls Who Hack and Secure Open Vote – Bianca Lewis: [Security Weekly](https://
 
 The book from Jodorowsky's Dune was scanned and posted - [Google Photos](https://photos.google.com/share/AF1QipNGBuasYa_WETf7sF6Q9W3SN-X7oiB3jrh5QDMMNQPQl9xgS3cua--BhRr-BImP1w?key=QmE1WTR0Z0FtZVFIalpsYVZ3LXFXMS1DUmNiUnR3).
 
+A PyPortal dice roller for the game of Risk. My first project, comments welcome! [GitHub](https://github.com/AnonEngineering/pyportal_risk_dice/blob/master/images/Portal_Risk_Dice.png) & [GitHub](https://github.com/AnonEngineering/pyportal_risk_dice).
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
 ## Coming soon
