dan and jeff updates

--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -85,15 +85,25 @@ What is the team up to this week? Let’s check in!
 
 **Dan**
 
-[![Dan](../assets/0mdd2020/dan.jpg)](https://circuitpython.org/)
+I've been able to connect via BLE with some inexpensive readily available cooking thermometers. The ones I have all identify as "iBBQ". Someone on the great world wide web [wrote up its BLE specs](https://gist.github.com/uucidl/b9c60b6d36d8080d085a8e3310621d64), and I was able to create a CircuitPython library quickly.
 
+I'd never used [adafruit.io](https://adafruit.io/) for anything before, so I cooked up a quick demo which gets temperatures and battery status via BLE and sends it on it via an [AirLift FeatherWing](https://www.adafruit.com/product/4264). I used the latest [CircuitPython MQTT library](https://learn.adafruit.com/mqtt-in-circuitpython/circuitpython-wifi-usage) which Brent R. released just yesterday. It worked great!
 
+[![Dan](../assets/03242020/03242020dan1.jpg)](https://circuitpython.org/)
+
+[![Dan](../assets/03242020/03242020dan2.jpg)](https://circuitpython.org/)
+
+I'm also working on a CircuitPython library that implements all the services we provide for the [Bluefruit Playground app](https://learn.adafruit.com/bluefruit-playground-app). We have [Arduino code](https://github.com/adafruit/Adafruit_nRF52_Arduino/blob/master/libraries/Bluefruit52Lib/examples/Peripheral/bluefruit_playground/bluefruit_playground.ino) for this, but haven't implemented it in CircuitPython yet. When I finish you'll be able to both send and receive data for all the on-board sensors, buttons, and peripherals on the Circuit Playground Bluefruit and the CLUE boards.
+
+Finally, I'm still debugging spurious writes to the SAMD51 internal flash -- no breakthroughs yet, but I have some clues.
 
 **Jeff**
 
-[![Jeff](../assets/0mdd2020/jeff.jpg)](https://circuitpython.org/)
+Together with PaintYourDragon, we are working on a new library for LED panels.  Dragon is doing the heavy lifting, creating the low level code (and Arduino bindings); I'm adapting it to fit CircuitPython.  In the future, CircuitPython will be able to drive displays like these, probably using the displayio module that is used for LCD and e-ink displays:
 
+[![Jeff](../assets/03242020/03242020jeff.jpg)](https://circuitpython.org/)
 
+We are also working towards releasing version 5.1.0 of the core CircuitPython code, and I am doing more of the release-related tasks this time around.  Two exciting additions are ulab, which I've talked about in other updates; and support for "f-strings", a more modern and concise way to build strings than "%" or ".format()".  Both of these features are expected to be available on higher powered CircuitPython devices with SAMD51, nRF, and STM microcontrollers.
 
 **Kattni**
 
